# blink_proof

./: .gitignore  Anchor.toml  Cargo.toml  README.md  README_zh.md  actions.json  package.json
app/: index.html
app/css/: style.css
app/js/: app.js  phash.js  wallet.js
programs/blink_proof/: Cargo.toml
programs/blink_proof/src/: lib.rs
scripts/: init_tree.ts
services/blink_action/: .env.example  Cargo.toml  README.md
services/blink_action/src/: action_types.rs  blinkproof.rs  main.rs  phash.rs
services/indexer/: .env  Cargo.toml
services/indexer/src/: main.rs
tests/: blink_proof.ts
