[package]
name = "blink_action"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
image = "0.25"
img_hash = "3.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
solana-client = "2"
solana-sdk = "2"
solana-system-interface = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
