[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
solana-client = "2"
solana-sdk = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
